--- a/ac/config/menus_edit.cfg
+++ b/ac/config/menus_edit.cfg
@@ -1,6 +1,6 @@
 newmenu editing
 
-menuitem "Mapmodels..."				"showmenu mapmodels"
+menuitem "Mapmodels..."				"showmenu Mapmodels"
 menuitem "Lighting..."				"showmenu lighting"
 menuitem "Entities"			        "showmenu entities"
 menuitem "Pickups"                              "showmenu pickups"
@@ -77,95 +77,151 @@ menuitem "Browse upper wall textures backwards	(Key: Keypad4)"		[ edittex 3 -1; 
 // End of "editing help" menu.
 
 
-newmenu mapmodels
+newmenu Mapmodels
 
-menuitem "misc"       "showmenu misc"
-menuitem "ladders"    "showmenu ladders" 
-menuitem "street"     "showmenu street"
-menuitem "plants"     "showmenu plants"
-menuitem "interior"   "showmenu interior"
-menuitem "lights"     "showmenu lights" 
-menuitem "industrial" "showmenu industrial"
-menuitem "signs"      "showmenu signs"
-menuitem "other"      "showmenu other"
-
-
-newmenu misc
-
-menuitem "Nothing/Clip (4x4x2)"       "newent mapmodel 0"
-menuitem "Bridge(8x8)"        	"saycommand /newent mapmodel 1 "
+menuitem "Platforms/Clips"	"showmenu Platforms/Clips"
+menuitem "Ladders/Stairs"	"showmenu Ladders/Stairs"
+menuitem "Fencing"		"showmenu Fencing"
+menuitem "Plants"     		"showmenu Plants"
+menuitem "Lights"     		"showmenu Lights" 
+menuitem "Street"     		"showmenu Street"
+menuitem "Office"   		"showmenu Office"
+menuitem "Home"			"showmenu Home"
+menuitem "Industrial" 		"showmenu Industrial"
+menuitem "Military"		"showmenu Military"
+menuitem "Signs"      		"showmenu Signs"
+menuitem "Other"      		"showmenu Other"
 
 
-newmenu ladders
+newmenu "Platforms/Clips"
 
-menuitem "One Ladder rung"       "newent mapmodel 57"
-menuitem "Ladder(7)"             "newent mapmodel 2"             
-menuitem "Ladder(8)"             "newent mapmodel 3"
-menuitem "Ladder(10)"            "newent mapmodel 4"
-menuitem "Ladder(11)"            "newent mapmodel 5"
-menuitem "Ladder(15)"            "newent mapmodel 6" 
+menuitem "Nothing/Clip (4x4x2)"		"newent mapmodel 0"
+menuitem "Bridge (8x8)"        		"saycommand /newent mapmodel 1 "
+menuitem "Platform (8x8)"		"saycommand /newent mapmodel 57 "
+menuitem "Wire platform (8x8)"		"saycommand /newent mapmodel 73 "		
 
+newmenu "Ladders/Stairs"
 
-newmenu street
+menuitem "Single ladder rung (1)"	"saycommand /newent mapmodel 57 "
+menuitem "Ladder(7)"			"newent mapmodel 2"             
+menuitem "Ladder(8)"			"newent mapmodel 3"
+menuitem "Ladder(10)"			"newent mapmodel 4"
+menuitem "Ladder(11)"			"newent mapmodel 5"
+menuitem "Ladder(15)"			"newent mapmodel 6"
+menuitem "" ""
+menuitem "Wire stairs (Top)"		"saycommand /newent mapmodel 79"
+menuitem "Wire stairs (Bottom)"		"saycommand /newent mapmodel 80"
+
+newmenu Home
+
+menuitem "Picture frame"      	"saycommand /newent mapmodel 29 "
+menuitem "Milk"			"newent mapmodel 69"
+menuitem "CRT TV"		"newent mapmodel 86"
+menuitem "CRT TV in stand"	"saycommand /newent mapmodel 70 "
+menuitem "Plasma TV"		"newent mapmodel 72"
+menuitem "Power meter"		"newent mapmodel 74"
+menuitem "Rack"			"newent mapmodel 75"
+menuitem "Utility table"	"newent mapmodel 87"
+
+newmenu Military
+
+menuitem "Bullet"		"newent mapmodel 61"
+menuitem "Shotgun shell"	"newent mapmodel 78"
+menuitem "Target"		"newent mapmodel 100"
+menuitem "Radar console"	"newent mapmodel 76"
+
+newmenu Street
 
 menuitem "Streetlight"    	"newent mapmodel 7"
 menuitem "Park Bench"        	"newent mapmodel 9"
 menuitem "Dumpster"    		"newent mapmodel 10"
-menuitem "Roadblock"     	"newent mapmodel 11"
-menuitem "Roadblock2"           "newent mapmodel 12"
-menuitem "Fence"     		"newent mapmodel 13"
-menuitem "Fencepost"     	"newent mapmodel 14"
-menuitem "Fencegate"            "newent mapmodel 15" 
-menuitem "Fencedoor"            "newent mapmodel 16"
+menuitem "Trashbag"		"newent mapmodel 84"
+menuitem "Trashcan"		"newent mapmodel 85"
+menuitem "Roadblock/Barrier"   	"newent mapmodel 11"
+menuitem "Roadblock/Barrier 2"	"newent mapmodel 12"
+menuitem "Drainpipe"		"newent mapmodel 59"
+menuitem "Wheel: Vertical"	"newent mapmodel 88"
+menuitem "Tyre: Horizontal"	"newent mapmodel 83"
 
-newmenu plants
+newmenu Plants
 
-menuitem "Grass1"     		"newent mapmodel 17"
-menuitem "Grass1_dry"           "newent mapmodel 18"
-menuitem "Grass1_snow"          "newent mapmodel 19"
-menuitem "Grass2"     		"newent mapmodel 20"
-menuitem "Grass2_dry"           "newent mapmodel 21"
-menuitem "Grass2_snow"          "newent mapmodel 22"
-menuitem "Plant1"     		"newent mapmodel 23"
-menuitem "Plant1_dry"           "newent mapmodel 24"
-menuitem "Plant1_snow"          "newent mapmodel 25"
+menuitem "Grass 1"		"newent mapmodel 17"
+menuitem "Grass 1 (Dry)"	"newent mapmodel 18"
+menuitem "Grass 1 (Snow)"	"newent mapmodel 19"
+menuitem "Grass 2"		"newent mapmodel 20"
+menuitem "Grass 2 (Dry)"	"newent mapmodel 21"
+menuitem "Grass 2 (Snow)"	"newent mapmodel 22"
+menuitem "Plant 1"		"newent mapmodel 23"
+menuitem "Plant 1 (Dry)"	"newent mapmodel 24"
+menuitem "Plant 1 (Snow)"	"newent mapmodel 25"
 
-newmenu interior
+newmenu Office
 
-menuitem "Chair" 	        "newent mapmodel 27"
-menuitem "Laptop"     		"newent mapmodel 28"
-menuitem "Picture1"      	"saycommand /newent mapmodel 29 "
-menuitem "Locker"     		"newent mapmodel 30"
+menuitem "Office chair"	        	"newent mapmodel 27"
+menuitem "Computer: Laptop"     	"newent mapmodel 28"
+menuitem "Computer: PC"			"newent mapmodel 101"
+menuitem "Computer: Interfaces"		"newent mapmodel 65"
+menuitem "Locker"     			"newent mapmodel 30"
+menuitem "Air Conditioner"		"newent mapmodel 60"
+menuitem "Communications rack"		"newent mapmodel 63"
+menuitem "Communications rack 2"	"newent mapmodel 64"
+menuitem "Office desk"			"newent mapmodel 71"
 
-
-newmenu lights
+newmenu Lights
 
 menuitem "Strahler"    		"saycommand /newent mapmodel 31"
 menuitem "Fluorescent lamp" 	"saycommand /newent mapmodel 32"
 menuitem "LightBulb"   		"saycommand /newent mapmodel 33"
 
-newmenu industrial
+newmenu Industrial
 
-menuitem "Barrel"          	"newent mapmodel 34"
-menuitem "Knocked Over Barrel"  "newent mapmodel 35"
-menuitem "Electric meter"	"newent mapmodel 36"
-menuitem "Pallette"             "newent mapmodel 37"
-menuitem "Gastank"   		"newent mapmodel 38"
-menuitem "Grate (horizontal)"   "newent mapmodel 39"
-menuitem "Grate (vertical)"     "newent mapmodel 40"
-menuitem "Wrench"     		"newent mapmodel 41"
-menuitem "Bolt"     		"newent mapmodel 42"
-menuitem "Hook"     		"newent mapmodel 52"
+menuitem "Barrel"          			"newent mapmodel 34"
+menuitem "Knocked-over barrel"  		"newent mapmodel 35"
+menuitem "Electric meter"			"newent mapmodel 36"
+menuitem "Pallette"             		"newent mapmodel 37"
+menuitem "Gastank"   				"newent mapmodel 38"
+menuitem "Grate (horizontal)"   		"newent mapmodel 39"
+menuitem "Grate (vertical)"     		"newent mapmodel 40"
+menuitem "Wrench"     				"newent mapmodel 41"
+menuitem "Bolt"     				"newent mapmodel 42"
+menuitem "Hook"     				"newent mapmodel 52"
+menuitem "Cinderblock"				"newent mapmodel 62"
+menuitem "Radioactive drum"			"newent mapmodel 81"
+menuitem "Knocked-over radioactive drum"	"newent mapmodel 82"
+menuitem "Wooden beam"				"newent mapmodel 66"
+menuitem "Swiveling security camera"		"saycommand /newent mapmodel 77"
+menuitem "Camera mount (Vertical)"		"saycommand /newent mapmodel 104"
+menuitem "Camera mount (Wall)"			"saycommand /newent mapmodel 105"
 
-newmenu signs
+newmenu Fencing
 
-menuitem "Flammable Sign"       "newent mapmodel 43"
-menuitem "Speed Limit Sign"     "newent mapmodel 44"
-menuitem "Maintenance Sign"     "newent mapmodel 45"
-menuitem "Caution Sign"         "newent mapmodel 46"
-menuitem "Biohazard Sign"       "newent mapmodel 47"
+menuitem "Fence"     		"newent mapmodel 13"
+menuitem "Fencepost"     	"newent mapmodel 14"
+menuitem "Open gate"            "newent mapmodel 15" 
+menuitem "Closed gate"          "newent mapmodel 16"
+menuitem "Corrugated fence"	"newent mapmodel 102"
+menuitem "Corrugated fence 2"	"newent mapmodel 103"
 
-newmenu other
+newmenu Signs
+
+menuitem "Flammable"		"saycommand /newent mapmodel 43"
+menuitem "Speed Limit 5"	"saycommand /newent mapmodel 44"
+menuitem "Maintenance"		"saycommand /newent mapmodel 45"
+menuitem "Caution"		"saycommand /newent mapmodel 46"
+menuitem "Biohazard"		"saycommand /newent mapmodel 47"
+menuitem "Toxic"		"saycommand /newent mapmodel 92"
+menuitem "Biohazard"		"saycommand /newent mapmodel 89"
+menuitem "Chemicals"		"saycommand /newent mapmodel 90"
+menuitem "Confined space"	"saycommand /newent mapmodel 91"
+menuitem "Do not enter!"	"saycommand /newent mapmodel 93"
+menuitem "Explosives"		"saycommand /newent mapmodel 94"
+menuitem "First aid"		"saycommand /newent mapmodel 95"
+menuitem "No entry"		"saycommand /newent mapmodel 96"
+menuitem "No smoking"		"saycommand /newent mapmodel 97"
+menuitem "Radioactive"		"saycommand /newent mapmodel 98"
+menuitem "Restricted area"	"saycommand /newent mapmodel 99"
+
+newmenu Other
 
 menuitem "Cigarette"     	"newent mapmodel 48"
 menuitem "Can" 			"newent mapmodel 49"
@@ -174,7 +230,10 @@ menuitem "Broken Wood"     	"newent mapmodel 51"
 menuitem "Coffee"               "newent mapmodel 53"
 menuitem "Flyer"                "newent mapmodel 54"
 menuitem "Tree Flyer"     	"newent mapmodel 26"
-menuitem "Wanted Poster"        "newent mapmodel 55"
+menuitem "Wanted Poster"        "saycommand /newent mapmodel 55"
+menuitem "Potato box"		"newent mapmodel 56"
+menuitem "Guard rail"		"newent mapmodel 67"
+menuitem "Guard rail 2"		"newent mapmodel 68"
 
 newmenu entities
 
@@ -219,6 +278,10 @@ menuitem "Newmap (128x128 cubes, recommended)" "newmap 7"
 menuitem "Newmap (256x256 cubes)"               "newmap 8"
 menuitem "Increase mapsize (2x)"              "mapenlarge"
 menuitem "Create a map message"               "saycommand /mapmsg "
+
+
+
+
 
 // Prefabricated lights menu
 // Add other prefab lights to these menus if needed.
