--- a/ac/config/default_map_settings.cfg
+++ b/ac/config/default_map_settings.cfg
@@ -80,7 +80,7 @@ mapmodel 0 1 0 0 "toca/cinderblock"		//62
 mapmodel 1 7 0 0 "toca/commrack"		//63
 mapmodel 1 4 0 0 "toca/commrack2"		//64
 mapmodel 0 0 0 0 "toca/computer/monkeymou"	//65
-mapmodel 0 8 0 0 "toca/corrugated/beam"		//66
+mapmodel 1 8 0 0 "toca/corrugated/beam"		//66 (For use with corrugated fence)
 mapmodel 1 4 0 0 "toca/guardrail"		//67 (Use nothing mapmodel to clip)
 mapmodel 1 4 0 0 "toca/guardrail2"		//68 (Use nothing mapmodel to clip)
 mapmodel 0 0 0 0 "toca/milkcarton"		//69
@@ -116,10 +116,12 @@ mapmodel 0 0 0 0 "toca/signs/radioactive"	//98
 mapmodel 0 0 0 0 "toca/signs/restricted"	//99
 mapmodel 1 6 0 0 "toca/signs/target"		//100
 mapmodel 0 2 0 0 "toca/computer/pc"		//101 
-mapmodel 1 8 0 0 "toca/corrugated/fence1"	//102 (Use nothing mapmodels to clips the sides)
-mapmodel 1 8 0 0 "toca/corrugated/fence2"	//103 (Use nothing mapmodels to clips the sides)
+mapmodel 1 8 0 0 "toca/corrugated/fence1"	//102
+mapmodel 1 8 0 0 "toca/corrugated/fence2"	//103 
 mapmodel 0 0 0 0 "toca/securitycam/vertmount"	//104 (For use with camera mapmodel 77)
 mapmodel 0 0 0 0 "toca/securitycam/wallmount"	//105 (For use with camera mapmodel 77)
+mapmodel 1 4 0 0 "toca/guardrail2/gr2pole"	//106
+mapmodel 0 0 0 0 "toca/airconditioner/interior"	//107
 						//	End of Tocas mapmodels.
 
 
