--- a/ac/config/menus_edit.cfg
+++ b/ac/config/menus_edit.cfg
@@ -162,7 +162,8 @@ menuitem "Computer: Laptop"     	"newent mapmodel 28"
 menuitem "Computer: PC"			"newent mapmodel 101"
 menuitem "Computer: Interfaces"		"newent mapmodel 65"
 menuitem "Locker"     			"newent mapmodel 30"
-menuitem "Air Conditioner"		"newent mapmodel 60"
+menuitem "Air Conditioner (Outer)"	"newent mapmodel 60"
+menuitem "Air Conditioner (Inner)"	"newent mapmodel 107"
 menuitem "Communications rack"		"newent mapmodel 63"
 menuitem "Communications rack 2"	"newent mapmodel 64"
 menuitem "Office desk"			"newent mapmodel 71"
@@ -188,19 +189,25 @@ menuitem "Hook"     				"newent mapmodel 52"
 menuitem "Cinderblock"				"newent mapmodel 62"
 menuitem "Radioactive drum"			"newent mapmodel 81"
 menuitem "Knocked-over radioactive drum"	"newent mapmodel 82"
-menuitem "Wooden beam"				"newent mapmodel 66"
 menuitem "Swiveling security camera"		"saycommand /newent mapmodel 77"
 menuitem "Camera mount (Vertical)"		"saycommand /newent mapmodel 104"
 menuitem "Camera mount (Wall)"			"saycommand /newent mapmodel 105"
 
 newmenu Fencing
 
-menuitem "Fence"     		"newent mapmodel 13"
-menuitem "Fencepost"     	"newent mapmodel 14"
-menuitem "Open gate"            "newent mapmodel 15" 
-menuitem "Closed gate"          "newent mapmodel 16"
-menuitem "Corrugated fence"	"newent mapmodel 102"
-menuitem "Corrugated fence 2"	"newent mapmodel 103"
+menuitem "Wire fence"			"newent mapmodel 13"
+menuitem "Wire fencepost"		"newent mapmodel 14"
+menuitem "Open wire fence-gate"		"newent mapmodel 15" 
+menuitem "Closed wire fence-gate"	"newent mapmodel 16"
+menuitem ""
+menuitem "Corrugated fence"		"newent mapmodel 102"
+menuitem "Corrugated fence 2"		"newent mapmodel 103"
+menuitem "Corrugated fence post"	"newent mapmodel 66"
+menuitem ""
+menuitem "Guard rail"			"newent mapmodel 67"
+menuitem "Guard rail 2"			"newent mapmodel 68"
+menuitem "Guard rail pole"		"newent mapmodel 106"
+
 
 newmenu Signs
 
@@ -232,8 +239,6 @@ menuitem "Flyer"                "newent mapmodel 54"
 menuitem "Tree Flyer"     	"newent mapmodel 26"
 menuitem "Wanted Poster"        "saycommand /newent mapmodel 55"
 menuitem "Potato box"		"newent mapmodel 56"
-menuitem "Guard rail"		"newent mapmodel 67"
-menuitem "Guard rail 2"		"newent mapmodel 68"
 
 newmenu entities
 
