--- a/ac/config/sounds.cfg
+++ b/ac/config/sounds.cfg
@@ -1,6 +1,6 @@
 registersound "player/jump"         //S_JUMP
-registersound "player/step" 60      // S_SOFTLAND
-registersound "player/land" 40      // S_HARDLAND
+registersound "player/step" 300       // S_SOFTLAND
+registersound "player/land" 200      // S_HARDLAND
 registersound "weapon/ric1"         // S_BULLETAIR1
 registersound "weapon/ric2"         // S_BULLETAIR2
 registersound "weapon/ric3"         // S_BULLETHIT
@@ -29,7 +29,7 @@ registersound "player/pain5"        //S_PAIN5
 registersound "player/pain6"        //S_PAIN6
 registersound "player/die1"         //S_DIE1
 registersound "player/die2"         //S_DIE2
-registersound "weapon/grenade_exp"           //S_FEXPLODE
+registersound "weapon/grenade_exp" 10000  //S_FEXPLODE
 registersound "player/splash1"      //S_SPLASH1
 registersound "player/splash2"      //S_SPLASH2
 registersound "ctf/flagdrop"       //S_FLAGDROP
@@ -41,7 +41,7 @@ registersound "weapon/grenade_throw" // S_GRENADETHROW
 registersound "weapon/pistol_akreload" // S_RAKIMBO
 registersound "misc/change_gun"		// S_GUNCHANGE
 registersound "player/gib"			// S_GIB
-registersound "misc/headshot"		// S_HEADSHOT
+registersound "misc/headshot" 10		// S_HEADSHOT
 registersound "misc/vote/vote_call" // S_CALLVOTE
 registersound "misc/vote/vote_pass" // S_VOTEPASS
 registersound "misc/vote/vote_fail" // S_VOTEFAIL
