--- a/ac/packages/models/weapons/assault/md3.cfg
+++ b/ac/packages/models/weapons/assault/md3.cfg
@@ -4,4 +4,4 @@ md3skin hands skin_hands.jpg
 md3anim "gun idle" 0 1
 md3anim "gun shoot" 8 8
 md3anim "gun reload" 0 1
-md3emit tag_muzzle 10 50 
+md3emit tag_muzzle 10 50 75
