--- a/ac/packages/maps/ac_urban.cfg
+++ b/ac/packages/maps/ac_urban.cfg
@@ -7,6 +7,8 @@
 // DIFFRENT SO UPON 2ND LOAD YOUR MAP
 // WOULD BE SCREWED UP...
 
+fog 222
+
 mapmodelreset // start @ zero
 
 mapmodel 2 2 0 0 "nothing"         //0 alter the values in your map.cfg and use to clip 
@@ -80,8 +82,8 @@ mapmodel 2 5 0 0 "nothing"         //61
 // skybox for this map - check /packages/skymaps/
 
 //loadsky "textures/skymaps/steini/steini2"
-//loadsky "textures/skymaps/steini/steini3"
-loadsky "textures/skymaps/steini/steini4"
+loadsky "textures/skymaps/steini/steini3"
+//loadsky "textures/skymaps/steini/steini4"
 //loadsky "textures/skymaps/makke/rocky"
 //loadsky "textures/skymaps/makke/mountain"
 
