ac_urban - Pickups/spawns/flags/mapmodels/lights
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1797 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/packages/maps/ac_urban.cfg
+++ b/ac/packages/maps/ac_urban.cfg
@@ -78,6 +78,11 @@ mapmodel 0 0 0 0 "drainpipe"       //58
 mapmodel 1 6 0 0 "locker"          //59
 mapmodel 1 6 0 0 "nothing"	   //60
 mapmodel 2 5 0 0 "nothing"         //61
+mapmodel 0 0 0 0 "toca/airconditioner"		//62
+mapmodel 0 1 0 0 "toca/cinderblock"		//63
+mapmodel 2 1 0 0 "toca/tyre"			//64
+mapmodel 1 3 0 0 "toca/trashcan"		//65
+mapmodel 1 3 0 0 "toca/wheel"			//66
 
 // skybox for this map - check /packages/skymaps/
 
