Map updates & fixes.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1810 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/packages/maps/ac_toxic.cfg
+++ b/ac/packages/maps/ac_toxic.cfg
@@ -76,11 +76,12 @@ mapmodel 0 0 0 0 "flyer"		//54
 mapmodel 0 0 0 0 "poster"		//55 mind z-buffer issues on 16bit!
 mapmodel 1 1 0 0 "aard"			//56 @ Clipped now, so that you go over the box, not through it.
 mapmodel 0 8 0 0 "nothing"		//57 @ Clipping of "0 8 0 0" used for fences/posts/gates.
-mapmodel 3  1 0 0 "comp_bridge"		//58
+mapmodel 3  1 0 0 "comp_bridge"		//58sss
 mapmodel 1 3 0 0 "toca/wheel"		//59
 mapmodel 2 1 0 0 "toca/tyre"		//60
 mapmodel 1 3 0 0 "toca/trashcan"	//61
 mapmodel 1 2 0 0 "toca/trashbag"	//62
+mapmodel 0 1 0 0 "toca/cinderblock"	//63
 
 
 
