--- a/ac/packages/maps/ac_urban.cfg
+++ b/ac/packages/maps/ac_urban.cfg
@@ -83,6 +83,9 @@ mapmodel 0 1 0 0 "toca/cinderblock"		//63
 mapmodel 2 1 0 0 "toca/tyre"			//64
 mapmodel 1 3 0 0 "toca/trashcan"		//65
 mapmodel 1 3 0 0 "toca/wheel"			//66
+mapmodel 0 0 0 0 "toca/securitycam/vertmount"	//67
+mapmodel 0 0 0 0 "toca/securitycam/wallmount"	//68
+mapmodel 0 0 0 0 "toca/securitycam/secucam"	//69
 
 // skybox for this map - check /packages/skymaps/
 
