--- a/ac/config/sounds.cfg
+++ b/ac/config/sounds.cfg
@@ -47,6 +47,8 @@ registersound "misc/vote/vote_pass" // S_VOTEPASS
 registersound "misc/vote/vote_fail" // S_VOTEFAIL
 registersound "player/footsteps" 100 1 // S_FOOTSTEPS
 registersound "player/crouch" 100 1    // S_FOOTSTEPSCROUCH
+registersound "misc/menu_click1"        // S_MENUSELECT
+registersound "misc/menu_click2"        // S_MENUENTER
 
 registersound "voicecom/affirmative"
 registersound "voicecom/allrightsir"
