--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -1,48 +1,40 @@
 newmenu multiplayer
 
-menuitem "Join Game"              	"showmenu server"
-menuitem "Join LAN Game"            "lanconnect"
-menuitem "Update Servers"         	"updatefrommaster;showmenu server"
-menuitem "Disconnect"             	"disconnect"
-menuitem "Vote"                   	"showmenu gamemode"
-menuitem "Chat"                     "saycommand"
-menuitem "Team Chat"                "saycommand %"
-menuitem "VoiceCom"                 "showmenu voicecom"
-menuitem "Server Operator"			"showmenu [server operator]"
+menuitem "Join a server"		"showmenu server"
+menuitem "Update servers"		"updatefrommaster; showmenu server"
+menuitem "Join LAN Game"		"lanconnect"
+menuitem "Disconnect"			"disconnect"
+menuitem "Server voting..."		[ showmenu "Server voting" ]
+menuitem "Chat"				"saycommand"
+menuitem "Team Chat"			"saycommand %"
+menuitem "VoiceCom"			"showmenu voicecom"
 
+newmenu "Server voting"
 
-newmenu gamemode
+menuitem "Vote to change mode/map" 		"showmenu Gamemode"
+menuitem "Vote to change mastermode" 		"showmenu Mastermode"
+menuitem "Vote to force a team change" 		[ showmenu "force team" ]
+menuitem "Vote to kick a player"		[showmenu "kick player"]
+menuitem "Vote to ban a player" 		[showmenu "ban player"]
+menuitem "Vote to remove bans"			"removebans"
 
-menuitem "Team Deathmatch"			"mode 0; showmenu maps"
-menuitem "Deathmatch"        		"mode 2; showmenu maps"
-menuitem "Team Survivor"			"mode 4; showmenu maps"
-menuitem "Survivor"					"mode 3; showmenu maps"
-menuitem "Capture the Flag"			"mode 5; showmenu maps_ctf"
-menuitem "Pistol Frenzy"		    "mode 6; showmenu maps"
+newmenu Gamemode
+
+menuitem "Team Deathmatch"		"mode 0; showmenu maps"
+menuitem "Deathmatch"			"mode 2; showmenu maps"
+menuitem "Team Survivor"		"mode 4; showmenu maps"
+menuitem "Survivor"			"mode 3; showmenu maps"
+menuitem "Capture the Flag"		"mode 5; showmenu maps_ctf"
+menuitem "Pistol Frenzy"		"mode 6; showmenu maps"
 menuitem "Last Swiss Standing"		"mode 9; showmenu maps"
-menuitem "One Shot, One Kill"       "mode 10; showmenu maps"
-menuitem "Team One Shot, One Kill"  "mode 11; showmenu maps"
-
-newmenu "server operator"
-
-menuitem "Claim Master" "setmaster 1"
-menuitem "Give Up Master" "setmaster 0"
-menuitem "Claim Admin" "saycommand /setadmin 1 myPassword"
-menuitem "Give Up Admin" "setadmin 0"
-menuitem "" ""
-menuitem "Set Mastermode" "showmenu mastermode"
-menuitem "Change Mode/Map" "showmenu gamemode"
-menuitem "Force Team Change" [showmenu "force team"]
-menuitem "Kick Player" [showmenu "kick player"]
-menuitem "Ban Player" [showmenu "ban player"]
-menuitem "Remove Bans" "removebans"
-menuitem "Give Master" [showmenu "give master"]
+menuitem "One Shot, One Kill"		"mode 10; showmenu maps"
+menuitem "Team One Shot, One Kill"	"mode 11; showmenu maps"
 
 
-newmenu mastermode
+newmenu Mastermode
 
-menuitem "Open" "mastermode 0"
-menuitem "Private" "mastermode 1"
+menuitem "Unlock the server (open)"		"mastermode 0"
+menuitem "Lock the server (private)"		"mastermode 1"
 
 
 newmenu voicecom 1 1
