new game settings
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1824 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -47,6 +47,7 @@ newmenu settings
 menuitem "Quick setup.."                                            [ showmenu "quick setup" ]
 menuitem "Keyboard/mouse controls.."                                "showmenu controls"
 menuitem "Video settings.."                                         "showmenu video"
+menuitem "Game settings.."                                          "showmenu game"
 menuitem "Sound settings.."                                         "showmenu sound"
 menuitem "" ""
 menuitem "Delete and reset all settings.."                              [ showmenu "Are you sure you want to delete/reset ALL settings?" ]
@@ -142,20 +143,17 @@ alias new_gfx_quality [
         
 alias new_sound_quality [
     if (= $arg1 3) [ // high sound (DEFAULT)
-        soundchans 64
         maxsoundsatonce 40
         footsteps 1
         bulletairsound 1
         bulletbouncesound 1
     ] [
         if (= $arg1 2) [ // medium
-            soundchans 32
             maxsoundsatonce 10
             footsteps 1
             bulletairsound 0
             bulletbouncesound 0
         ] [                         // low
-            soundchans 32
             maxsoundsatonce 5
             footsteps 0
             bulletairsound 0
@@ -214,6 +212,8 @@ menuitemtextinput "Screen height:					" "$scr_h" "scr_h $arg1"
 
 menuitemcheckbox "Fullscreen: " "$fullscreen" "fullscreen $arg1"
 
+menuitemslider "View of field: " 90 120 "$fov" 2 "" "fov $arg1"
+
 alias fsaa_valuemap "-1 2 4 8 16"
 menuitemslider "Antialiasing (FSAA): " 0 4 "(findlist $fsaa_valuemap $fsaa)" 1 "off 2 4 8 16" "fsaa (at $fsaa_valuemap $arg1)"
 
@@ -239,12 +239,22 @@ menuitem "				[ OK ]				" resetgl
 
 newmenu sound
 
-menuitemslider "sound volume: " 0 255 "$soundvol" 16 "" "soundvol $arg1"
-menuitemslider "music volume: " 0 255 "$musicvol" 16 "" "musicvol $arg1"
-menuitemcheckbox "stereo:							" "$stereo" "stereo $arg1"
-menuitemslider "channels: " 0 128 "$soundchans" 4 "" "soundchans $arg1"
-menuitemslider "sounds at once: " 0 100 "$maxsoundsatonce" 2 "" "maxsoundsatonce $arg1"
-menuitemslider "sound buffer length: " 128 4096 "$soundbufferlen" 128 "" "soundbufferlen $arg1"
+menuitemslider "Sound volume: " 0 255 "$soundvol" 16 "" "soundvol $arg1"
+menuitemslider "Music volume: " 0 255 "$musicvol" 16 "" "musicvol $arg1"
+menuitemslider "Sounds at once: " 0 100 "$maxsoundsatonce" 2 "" "maxsoundsatonce $arg1"
+menuitemcheckbox "Footsteps: " "$footsteps" "footsteps $arg1"
+menuitemcheckbox "Bullets: " "$bulletairsound" "bulletairsound $arg1; bulletbouncesound $arg1"
+
+
+newmenu game
+
+menuitemcheckbox "Auto reload: " "$autoreload" "autoreload $arg1"
+menuitemcheckbox "Auto getmap: " "$autogetmap" "autogetmap $arg1"
+menuitemslider "Player skins: " 0 2 "$teamdisplaymode" 1 [normal "colored vests" "full color"] "teamdisplaymode $arg1"
+menuitemcheckbox "Show stats: " "(= $hidestats 0)" "hidestats (= $arg1 0)"
+menuitemcheckbox "Show HUD gun: " "$hudgun" "hudgun $arg1"
+menuitemcheckbox "Show radar: " "(= $hideradar 0)" "hideradar (= $arg1 0)"
+menuitemcheckbox "Show votes: " "(= $hidevote 0)" "hidevote (= $arg1 0)"
 
 
 newmenu fpsrange
