more menu settings
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1833 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -87,11 +87,11 @@ alias new_gfx_quality [
         waterreflect 1
         dynshadow 40
         lighterror 1
-        scorchttl 10000
-        bulletholettl 10000
-        bloodttl 10000
-        gibttl 5000
-        shotlinettl 75
+        scorch 1
+        bullethole 1
+        blood 1
+        gib 1
+        shotline 1
     ] [
         if (= $arg1 3) [ // high
             fsaa 0
@@ -102,11 +102,11 @@ alias new_gfx_quality [
             waterreflect 1
             dynshadow 40
             lighterror 4
-            scorchttl 10000
-            bulletholettl 10000
-            bloodttl 10000
-            gibttl 5000
-            shotlinettl 75            
+            scorch 1
+            bullethole 1
+            blood 1
+            gib 1
+            shotline 1
         ] [
             if (= $arg1 2) [ // medium (DEFAULT)
                 fsaa 0
@@ -117,11 +117,11 @@ alias new_gfx_quality [
                 waterreflect 1
                 dynshadow 40
                 lighterror 4
-                scorchttl 10000
-                bulletholettl 10000
-                bloodttl 10000
-                gibttl 5000
-                shotlinettl 75                
+                scorch 1
+                bullethole 1
+                blood 1
+                gib 1
+                shotline 1
             ] [                 // low
                 fsaa 0
                 minlod 25
@@ -131,11 +131,11 @@ alias new_gfx_quality [
                 waterreflect 0
                 dynshadow 0
                 lighterror 10
-                scorchttl 0
-                bulletholettl 0
-                bloodttl 0
-                gibttl 0
-                shotlinettl 0                
+                scorch 0
+                bullethole 0
+                blood 0
+                gib 0
+                shotline 0
             ]
         ]
     ]
@@ -218,8 +218,10 @@ alias fsaa_valuemap "-1 2 4 8 16"
 menuitemslider "Antialiasing (FSAA): " 0 4 "(findlist $fsaa_valuemap $fsaa)" 1 "off 2 4 8 16" "fsaa (at $fsaa_valuemap $arg1)"
 
 menuitemslider "Vsync: " 0 1 "$vsync" 1 "off on" "vsync $arg1"
-
 menuitemslider "Gamma: " 30  300 "$gamma"  5 "" "gamma $arg1"
+menuitemcheckbox "Bulletholes: " "$bullethole" "bullethole $arg1"
+menuitemcheckbox "Scorch: " "$scorch" "scorch $arg1"
+menuitemcheckbox "Blood: " "$blood" "blood $arg1; gib $arg1"
 
 alias minlod_valuemap "25 60 100 250"
 menuitemslider "Minimal level of detail: " 25 250 "(findlist $minlod_valuemap $minlod)" 5 ["low" "decent" "good" "best"] "minlod (at $minlod_valuemap $arg1)"
