Updated interface docs to include info about ratio.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1855 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -115,6 +115,7 @@ menuitem "Rick Helmus			Bot code." ""
 menuitem "absinth				Packaging AssaultCube for Mac." ""
 menuitem "dtd				Hosting." ""
 menuitem "ac_stef				Bug fixes." ""
+menuitem "Grenadier (aurhat)		Small code contributions/fixes." ""
 menuitem "" ""
 menuitem "						[ Page 2 ]"	[ showmenu "Credits (2)" ]
 
