--- a/ac/config/admin.cfg
+++ b/ac/config/admin.cfg
@@ -4,8 +4,10 @@ alias removebans [ callvote 2 $arg1 ]
 alias mastermode [ callvote 3 $arg1 ]
 alias autoteam [ callvote 4 $arg1 ]
 alias forceteam [ callvote 5 $arg1 ]
-alias givemaster [ callvote 6 $arg1 ]
+alias giveadmin [ callvote 6 $arg1 ]
 alias map [ callvote 7 $arg1 $arg2 ]
-alias recorddemo [ callvote 8 $arg1 ]
+alias recorddemo [ callvote 8 1 ]
 alias stopdemo [ callvote 9 ]
-alias cleardemos [ callvote 10 $arg1 ]
+alias cleardemo [ callvote 10 $arg1 ]
+alias cleardemos [ callvote 10 0 ]
+alias demo [ mode -3; map $arg1 ]
