new hud settings, credits
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1865 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -87,15 +87,15 @@ newmenu credits
 
 menuitem "Project Leaders" ""
 menuitem "-----------------" ""
-menuitem "driAn				Lead coder." ""
+menuitem "driAn				Lead coder, OpenAL, OpenGL, gameplay code." ""
 menuitem "makkE				Lead artist, models, skins, animations," ""
 menuitem "				mapping, 2D-art, textures, sounds." ""
 menuitem "" ""
 menuitem "Active Developers/Contributors" ""
 menuitem "-----------------------------------" ""
-menuitem "eihrul				Coder, Enet Library, Cube2 backporting." ""
+menuitem "eihrul				Coder, OpenGL expert, Enet Library, Cube2 backporting." ""
 menuitem "RandumIdiot			Mapping, documentation, tester, clean-up crew." ""
-menuitem "Flowtron			Universal team member, additional code, admin." ""
+menuitem "Flowtron			Universal team member, additional code, admin, community chief" ""
 menuitem "" ""
 menuitem "Community Mappers" ""
 menuitem "-----------------------" ""
@@ -128,7 +128,7 @@ menuitem "DCP						End-of-match music." ""
 menuitem "Toca						Mapmodels." ""
 menuitem "Topher						Some crosshairs." ""
 menuitem "leileilol						Bullethole image." ""
-menuitem "Kurt Keslar					Dummy texture." ""
+menuitem "Kurt Keslar					textures." ""
 menuitem "Steini						Skyboxes." ""
 menuitem "wildweasel					Vote sounds." ""
 menuitem "Tremulous team				Gib sound." ""
