--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -5,7 +5,6 @@ menuitemslider "Team: " 0 1 "(curteam)" 1 "CLA RVSF" "alias newteam $arg1"
 menuitem "" ""
 menuitem "Select skin.."          [showmenu (at [CLA RVSF] (curteam))]
 menuitem "Select weapon.."        "showmenu weapons"
-menuitem "Select crosshair..				"	  "showmenu Crosshairs"
 menuitem "" ""
 menuitem "[ OK ]" [team (at [CLA RVSF] $newteam)]
 
@@ -45,12 +44,14 @@ menuitem "Police"           "skin 5" "chmenumdl RVSF playermodels/RVSF/06 all 50
 newmenu settings
 
 menuitem "Quick setup.."                                            [ showmenu "quick setup" ]
+menuitem "" ""
 menuitem "Keyboard/mouse controls.."                                "showmenu controls"
 menuitem "Video settings.."                                         "showmenu video"
-menuitem "Game settings.."                                          "showmenu game"
 menuitem "Sound settings.."                                         "showmenu sound"
+menuitem "Game settings.."                                          "showmenu game"
+menuitem "Head-Up display settings.."                               "showmenu HUD"
 menuitem "" ""
-menuitem "Delete and reset all settings.."                              [ showmenu "Are you sure you want to delete/reset ALL settings?" ]
+menuitem "Delete and reset all settings.."                          [ showmenu "Are you sure you want to delete/reset ALL settings?" ]
 
 newmenu "quick setup"
 
@@ -211,17 +212,14 @@ menuitemtextinput "Screen width:					" "$scr_w" "scr_w $arg1"
 menuitemtextinput "Screen height:					" "$scr_h" "scr_h $arg1"
 
 menuitemcheckbox "Fullscreen: " "$fullscreen" "fullscreen $arg1"
-
-menuitemslider "View of field: " 90 120 "$fov" 2 "" "fov $arg1"
+menuitemslider "Gamma: " 30  300 "$gamma"  5 "" "gamma $arg1"
 
 alias fsaa_valuemap "-1 2 4 8 16"
 menuitemslider "Antialiasing (FSAA): " 0 4 "(findlist $fsaa_valuemap $fsaa)" 1 "off 2 4 8 16" "fsaa (at $fsaa_valuemap $arg1)"
+menuitemcheckbox "Vsync: " "$vsync" "vsync $arg1"
+menuitemslider "View of field: " 90 120 "$fov" 2 "" "fov $arg1"
 
-menuitemslider "Vsync: " 0 1 "$vsync" 1 "off on" "vsync $arg1"
-menuitemslider "Gamma: " 30  300 "$gamma"  5 "" "gamma $arg1"
-menuitemcheckbox "Bulletholes: " "$bullethole" "bullethole $arg1"
-menuitemcheckbox "Scorch: " "$scorch" "scorch $arg1"
-menuitemcheckbox "Blood: " "$blood" "blood $arg1; gib $arg1"
+menuitem "" ""
 
 alias minlod_valuemap "25 60 100 250"
 menuitemslider "Minimal level of detail: " 25 250 "(findlist $minlod_valuemap $minlod)" 5 ["low" "decent" "good" "best"] "minlod (at $minlod_valuemap $arg1)"
@@ -236,7 +234,13 @@ menuitemslider "Light error: " 1 100 "$lighterror" 5 "" "lighterror $arg1"
 menuitem "FPS range.." "showmenu fpsrange"
 
 menuitem "" ""
-menuitem "				[ OK ]				" resetgl
+menuitemcheckbox "Bulletholes: " "$bullethole" "bullethole $arg1"
+menuitemcheckbox "Scorch: " "$scorch" "scorch $arg1"
+menuitemcheckbox "Blood: " "$blood" "blood $arg1; gib $arg1"
+
+
+menuitem "" ""
+menuitem "				[ Apply now! ]				" resetgl
 
 
 newmenu sound
@@ -253,10 +257,20 @@ newmenu game
 menuitemcheckbox "Auto reload: " "$autoreload" "autoreload $arg1"
 menuitemcheckbox "Auto getmap: " "$autogetmap" "autogetmap $arg1"
 menuitemslider "Player skins: " 0 2 "$teamdisplaymode" 1 [normal "colored vests" "full color"] "teamdisplaymode $arg1"
+
+
+newmenu HUD
+
 menuitemcheckbox "Show stats: " "(= $hidestats 0)" "hidestats (= $arg1 0)"
-menuitemcheckbox "Show HUD gun: " "$hudgun" "hudgun $arg1"
+menuitemcheckbox "Show gun: " "$hudgun" "hudgun $arg1"
 menuitemcheckbox "Show radar: " "(= $hideradar 0)" "hideradar (= $arg1 0)"
 menuitemcheckbox "Show votes: " "(= $hidevote 0)" "hidevote (= $arg1 0)"
+menuitemcheckbox "Show icons: " "(= $hidehudequipment 0)" "hidehudequipment (= $arg1 0)"
+menuitemcheckbox "Show console: " "(= $hideconsole 0)" "hideconsole (= $arg1 0)"
+menuitemcheckbox "Show spectate info: " "(= $hidespecthud 0)" "hidespecthud (= $arg1 0)"
+menuitemcheckbox "Show quick messages: " "(= $hidehudmsgs 0)" "hidehudmsgs (= $arg1 0)"
+menuitemcheckbox "Show crosshair team-sign: " "$crosshairteamsign" "crosshairteamsign $arg1"
+menuitem "Select crosshair..				"	  "showmenu Crosshairs"
 
 
 newmenu fpsrange
