--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -73,8 +73,8 @@ alias getgfxq [
 ]
 
 alias getsoundq [
-    if (= $soundchans 64) [ result 3 ] [
-        if (= $footsteps 1) [ result 2 ] [ result 1 ]
+    if (= $maxsoundsatonce 40) [ result 3 ] [
+        if (= $maxsoundsatonce 10) [ result 2 ] [ result 1 ]
     ]
 ]
 
