--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -153,7 +153,7 @@ alias new_sound_quality [
             maxsoundsatonce 10
             footsteps 1
             bulletairsound 0
-            bulletbouncesound 0
+            bulletbouncesound 1
         ] [                         // low
             maxsoundsatonce 5
             footsteps 0
@@ -208,8 +208,8 @@ menuitem "No! Take me back!" "showmenu controls"
 
 newmenu video
 
-menuitemtextinput "Screen width:					" "$scr_w" "scr_w $arg1"
-menuitemtextinput "Screen height:					" "$scr_h" "scr_h $arg1"
+menuitemtextinput "Screen width: " "$scr_w" "scr_w $arg1"
+menuitemtextinput "Screen height: " "$scr_h" "scr_h $arg1"
 
 menuitemcheckbox "Fullscreen: " "$fullscreen" "fullscreen $arg1"
 menuitemslider "Gamma: " 30  300 "$gamma"  5 "" "gamma $arg1"
@@ -249,13 +249,14 @@ menuitemslider "Sound volume: " 0 255 "$soundvol" 16 "" "soundvol $arg1"
 menuitemslider "Music volume: " 0 255 "$musicvol" 16 "" "musicvol $arg1"
 menuitemslider "Sounds at once: " 0 100 "$maxsoundsatonce" 2 "" "maxsoundsatonce $arg1"
 menuitemcheckbox "Footsteps: " "$footsteps" "footsteps $arg1"
-menuitemcheckbox "Bullets: " "$bulletairsound" "bulletairsound $arg1; bulletbouncesound $arg1"
+menuitemcheckbox "Bullet hit: " "$bulletbouncesound" "bulletbouncesound $arg1"
+menuitemcheckbox "Bullet near-miss: " "$bulletairsound" "bulletairsound $arg1"
 
 
 newmenu game
 
-menuitemcheckbox "Auto reload: " "$autoreload" "autoreload $arg1"
-menuitemcheckbox "Auto getmap: " "$autogetmap" "autogetmap $arg1"
+menuitemcheckbox "Auto weapon reload: " "$autoreload" "autoreload $arg1"
+menuitemcheckbox "Auto map download: " "$autogetmap" "autogetmap $arg1"
 menuitemslider "Player skins: " 0 2 "$teamdisplaymode" 1 [normal "colored vests" "full color"] "teamdisplaymode $arg1"
 
 
@@ -264,6 +265,7 @@ newmenu HUD
 menuitemcheckbox "Show stats: " "(= $hidestats 0)" "hidestats (= $arg1 0)"
 menuitemcheckbox "Show gun: " "$hudgun" "hudgun $arg1"
 menuitemcheckbox "Show radar: " "(= $hideradar 0)" "hideradar (= $arg1 0)"
+menuitemcheckbox "Show team icon: " "(= $hideteam 0)" "hideteam (= $arg1 0)"
 menuitemcheckbox "Show votes: " "(= $hidevote 0)" "hidevote (= $arg1 0)"
 menuitemcheckbox "Show icons: " "(= $hidehudequipment 0)" "hidehudequipment (= $arg1 0)"
 menuitemcheckbox "Show console: " "(= $hideconsole 0)" "hideconsole (= $arg1 0)"
