--- a/ac/config/keymap.cfg
+++ b/ac/config/keymap.cfg
@@ -107,9 +107,9 @@ keymap 283 F2 "vote 2"
 keymap 284 F3 ""
 keymap 285 F4 ""
 keymap 286 F5 "toggleocull"
-keymap 287 F6 "showmip"
+keymap 287 F6 "if $editing [ showmip ] [ if (= $followmode 0) [ followmode 1 ] [ followmode 0 ] ]"
 keymap 288 F7 "spectate"
-keymap 289 F8 "followplayer 1"
+keymap 289 F8 "followplayer"
 keymap 290 F9 ""
 keymap 291 F10 "getdemo"
 keymap 292 F11 "toggleconsole"
