Integration of "player setup" menu into the "settings" menu (Player setup menu is gone). Updated readme with driAn's "credits" changes.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1879 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -6,7 +6,6 @@ newmenu main
 
 menuitem "Multiplayer"			"showmenu multiplayer"
 menuitem "Singleplayer"			"showmenu singleplayer"
-menuitem "Player Setup"			"showmenu setup"
 menuitem "Settings"			"showmenu settings"
 menuitem "Demo"				"showmenu demo"
 menuitem "Editing" 			"showmenu editing"
@@ -128,7 +127,6 @@ menuitem "DCP						End-of-match music." ""
 menuitem "Toca						Mapmodels." ""
 menuitem "Topher						Some crosshairs." ""
 menuitem "leileilol						Bullethole image." ""
-menuitem "Kurt Keslar					textures." ""
 menuitem "Steini						Skyboxes." ""
 menuitem "wildweasel					Vote sounds." ""
 menuitem "Tremulous team				Gib sound." ""
@@ -139,7 +137,7 @@ menuitem "Texture sources" ""
 menuitem "------------------""
 menuitem "Articool, Boeck, Craig Fortune, Digital Flux, mayang.com, imageafter.com, " ""
 menuitem "Craig Fortune, Digital Flux, mayang.com, afflict.net, Rohrschach, Lemog 3D," ""
-menuitem "Golgotha team, NOCTUA, Chris Zastrow, 3D Cafe." ""
+menuitem "Golgotha team, NOCTUA, Chris Zastrow, 3D Cafe, Kurt Keslar." ""
 menuitem "" ""
 menuitem "Also thanks to kurtis84, player1, quase, exis, talou and others for testing." ""
 menuitem "Thanks to flowtron and exis for organising the 0.93 AssaultCube Release Cup." ""
