--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -1,13 +1,3 @@
-newmenu setup
-
-menuitemtextinput "Nickname:			" "result $curname" "name $arg1"
-menuitemslider "Team: " 0 1 "(curteam)" 1 "CLA RVSF" "alias newteam $arg1"
-menuitem "" ""
-menuitem "Select skin.."          [showmenu (at [CLA RVSF] (curteam))]
-menuitem "Select weapon.."        "showmenu weapons"
-menuitem "" ""
-menuitem "[ OK ]" [team (at [CLA RVSF] $newteam)]
-
 newmenu Crosshairs
 menudirlist "packages/misc/crosshairs" "png" "loadcrosshair (concatword $arg1 .png)"
 
@@ -43,8 +33,14 @@ menuitem "Police"           "skin 5" "chmenumdl RVSF playermodels/RVSF/06 all 50
 
 newmenu settings
 
-menuitem "Quick setup.."                                            [ showmenu "quick setup" ]
+menuitemtextinput "Nickname:" "result $curname" "name $arg1"
+menuitemslider "Team: " 0 1 "(curteam)" 1 "CLA RVSF" "alias newteam $arg1"
 menuitem "" ""
+menuitem "Select player skin.."          [showmenu (at [CLA RVSF] (curteam))]
+menuitem "Select weapon.."        "showmenu weapons"
+menuitem "Select crosshair.."	  "showmenu Crosshairs"
+menuitem "" ""
+menuitem "First-run settings.."                                            [ showmenu "quick setup" ]
 menuitem "Keyboard/mouse controls.."                                "showmenu controls"
 menuitem "Video settings.."                                         "showmenu video"
 menuitem "Sound settings.."                                         "showmenu sound"
@@ -52,17 +48,19 @@ menuitem "Game settings.."                                          "showmenu ga
 menuitem "Head-Up display settings.."                               "showmenu HUD"
 menuitem "" ""
 menuitem "Delete and reset all settings.."                          [ showmenu "Are you sure you want to delete/reset ALL settings?" ]
+menuitem ""
+menuitem "		 [ OK ] 		" [ team (at [CLA RVSF] $newteam) ]
 
 newmenu "quick setup"
 
-menuitemtextinput "Nickname:					" "" "name $arg1"
-menuitemtextinput "Resolution (Width):				" "$scr_w" "scr_w $arg1"
-menuitemtextinput "Resolution (Height):				" "$scr_h" "scr_h $arg1"
+menuitemtextinput "Nickname:" 		"" "name $arg1"
+menuitemtextinput "Resolution (Width):  " "$scr_w" "scr_w $arg1"
+menuitemtextinput "Resolution (Height): " "$scr_h" "scr_h $arg1"
 menuitemslider "Mouse sensitivity: " 2 100 "($sensitivity)" 2 "" "sensitivity $arg1"
 menuitemslider "Graphics detail: " 1 4 "(getgfxq)" 1 "low medium good best" "new_gfx_quality $arg1"
 menuitemslider "Sound detail: " 1 3 "(getsoundq)" 1 "low medium high" "new_sound_quality $arg1"
 menuitem "" ""
-menuitem "				[ OK ]				" "resetgl"
+menuitem "			 [ OK ] 			" "resetgl"
 
 alias getgfxq [
     if (= $minlod 200) [ result 4 ] [
