allow watercolour in map cfg
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@1884 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/scontext.cfg
+++ b/ac/config/scontext.cfg
@@ -11,6 +11,7 @@ scriptcontext 1 texture
 scriptcontext 1 fog
 scriptcontext 1 fogcolour
 scriptcontext 1 mapsound
+scriptcontext 1 watercolour
 
 // secure this configuration for the rest of the game
 sealcontexts 
